--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         mavenCentral()
+        maven {url 'https://maven.brott.dev/'}
         google()
     }
 }
