--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -25,5 +25,5 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
-    implementation 'com.acmerobotics.dashboard:dashboard:0.4.12'
+    //implementation 'com.acmerobotics.dashboard:dashboard:0.4.12'
 }
